# skill_mathing

./: .gitignore
code/skill-matching/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  script.sh
code/skill-matching/code/: 2_proceccing.ipynb  3_w2v_modelimg.ipynb  4_comform_ranking.ipynb
code/skill-matching/code/.ipynb_checkpoints/: 1_create_resume_corpus.csv-checkpoint.ipynb  2_proceccing-checkpoint.ipynb
